--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "busy-hours": "0.0.5",
+    "cors": "^2.8.5",
     "debug": "^4.1.1",
     "dotenv": "^7.0.0",
     "express": "~4.16.0",
