--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "server",
   "version": "0.0.0",
   "private": true,
+  "main": "server.js",
   "scripts": {
-    "start": "node ./bin/www",
     "test": "mocha --exit"
   },
   "dependencies": {
