--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "main": "server.js",
   "scripts": {
+    "main": "node ./bin/www",
     "test": "mocha --timeout 15000 --exit"
   },
   "dependencies": {
