add updates to busyHours api

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PLACES_API_KEY=AIzaSyBmA40LNSpv2kVlUf8Byn-YW6W_ji6zuMY
 JWT_SECRET=scotchbonnetpepperrs
+REACT_APP_API_BASE_URL=https://uncrowd-me-api.herokuapp.com
